# ical-merger

./: .gitignore  Cargo.toml  LICENSE  README.md  example.config.yaml  generate_config_example.py  generate_config_lib.py  pre-release.sh
.github/workflows/: release.yml  test.yml
src/: calendars.rs  config.rs  lib.rs  main.rs
