[package]
name = "ical-merger"
version = "0.1.0"
edition = "2021"
default-run = "ical-merger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
tokio = { version = "1.19.2", features = ["full"] }
openssl = { version = "0.10.41", features = ["vendored"] }
rocket = "0.5.0-rc.2"
serde = "1.0.139"
serde_json = "1.0.82"
async-recursion = "1.0.0"
elikoga-ical-rs = "0.2.2"
eyre = "0.6.8"
serde_yaml = "0.8.25"
serde_with = "1.14.0"
dashmap = "5.3.4"
