[package]
name = "ical-merger"
version = "0.3.0"
edition = "2021"
default-run = "ical-merger"
authors = ["Eli Kogan-Wang <elikowa@gmail.com>"]
description = "Merges multiple iCalendar files into one, as a web service."
license = "MIT"
documentation = "https://docs.rs/ical-merger"
homepage = "https://github.com/elikoga/ical-merger"
repository = "https://github.com/elikoga/ical-merger"
keywords = ["icalendar", "calendar", "merger", "ical", "ics"]
categories = ["text-processing", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
tokio = { version = "1.20.4", features = ["full"] }
openssl = { version = "0.10.41", features = ["vendored"] }
rocket = "0.5.0-rc.2"
serde = "1.0.139"
serde_json = "1.0.82"
async-recursion = "1.0.0"
elikoga-ical-rs = "0.2.4"
eyre = "0.6.8"
serde_yaml = "0.8.25"
serde_with = "1.14.0"
dashmap = "5.3.4"

[package.metadata.release]
pre-release-hook = ["./pre-release.sh"]
